[project]
name = "pylobe"
version = "0.1.0"
description = "A NumPy-native library for wrangling with far-field patterns."
readme = "README.md"
authors = [
    { name = "saeed", email = "git@saeedc.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "scipy>=1.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.26.0",
    "pytest>=8.3.4",
    "ruff-lsp>=0.0.60",
]
docs = [
    "numpydoc>=1.8.0",
    "sphinx>=8.2.0",
]
